Dark mode update / solve password update
Tweaked output of game once a player guessed the right password as well as finishing out how the page looked in dark mode

--- a/Ian-Nicholas-RCOS-Notes/password-game/stylesheetV1.css
+++ b/Ian-Nicholas-RCOS-Notes/password-game/stylesheetV1.css
@@ -57,7 +57,7 @@ button:hover {
 }
 
 .progress{
-  color:#7ec80f
+  color:#45287c
 }
 
 .warning {
